--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "eslint --ext .js,.ts --ignore-path .eslintignore ."
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.4"
+    "@nuxtjs/tailwindcss": "^5.1.3",
+    "nuxt": "3.0.0-rc.4",
+    "push-dir": "^0.4.1"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "@vue/eslint-config-standard": "^7.0.0",
