--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "deploy": "nuxt generate && gh-pages -d dist --dotfiles"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.1.3",
-    "@tailwindcss/typography": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@iconify-json/bi": "^1.1.6",
+    "@nuxtjs/tailwindcss": "^5.3.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "@vue/eslint-config-standard": "^7.0.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-vue": "^9.2.0",
     "gh-pages": "^4.0.0",
-    "nuxt": "3.0.0-rc.4",
-    "unplugin-icons": "^0.14.7"
+    "nuxt": "3.0.0-rc.6",
+    "unplugin-icons": "^0.14.7",
+    "unplugin-vue-components": "^0.21.1"
+  },
+  "dependencies": {
+    "@fontsource/montserrat": "^4.5.11"
   }
 }
