--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,43 @@
 {
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-normal.cffe1393.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2"
-  },
   "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-latin-variable-wghtOnly-normal.ae919a7c.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-normal.3fef5946.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-italic.15d402e4.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-italic.8a7e993e.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-normal.56544b89.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2"
   },
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-normal.3fef5946.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-normal.cffe1393.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-italic.15d402e4.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2"
+  },
   "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-italic.a48afdb0.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-latin-variable-wghtOnly-italic.33befdbb.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-italic.9df5f242.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-latin-variable-wghtOnly-italic.33befdbb.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-italic.8a7e993e.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2"
   },
   "assets/img/profile.jpg": {
     "file": "_nuxt/profile.ad22bd34.jpg",
@@ -47,20 +47,20 @@
     "file": "_nuxt/synthszr.acde00c0.png",
     "src": "assets/img/synthszr.png"
   },
-  "assets/img/gocallink-fullui.jpeg": {
-    "file": "_nuxt/gocallink-fullui.9926256b.jpeg",
-    "src": "assets/img/gocallink-fullui.jpeg"
+  "assets/img/gocallink-fullui-cropped.jpeg": {
+    "file": "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
+    "src": "assets/img/gocallink-fullui-cropped.jpeg"
   },
-  "assets/img/hlreport-m-4.jpeg": {
-    "file": "_nuxt/hlreport-m-4.8203ef75.jpeg",
-    "src": "assets/img/hlreport-m-4.jpeg"
+  "assets/img/hlreport-m-4-cropped.jpeg": {
+    "file": "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
+    "src": "assets/img/hlreport-m-4-cropped.jpeg"
   },
   "assets/img/maav-website.png": {
     "file": "_nuxt/maav-website.07a144a0.png",
     "src": "assets/img/maav-website.png"
   },
   "node_modules/nuxt/dist/app/entry.mjs": {
-    "file": "_nuxt/entry.b8fc773e.mjs",
+    "file": "_nuxt/entry.9f037b96.mjs",
     "src": "node_modules/nuxt/dist/app/entry.mjs",
     "isEntry": true,
     "dynamicImports": [
@@ -70,7 +70,7 @@
       "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs"
     ],
     "css": [
-      "_nuxt/entry.f6fa2434.css"
+      "_nuxt/entry.f3ffb98f.css"
     ],
     "assets": [
       "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
@@ -86,7 +86,7 @@
     ]
   },
   "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs": {
-    "file": "_nuxt/error-component.c1cd631c.mjs",
+    "file": "_nuxt/error-component.99678f1b.mjs",
     "src": "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs",
     "isDynamicEntry": true,
     "imports": [
@@ -98,38 +98,38 @@
     ]
   },
   "pages/experience.vue": {
-    "file": "_nuxt/experience.92806bac.mjs",
+    "file": "_nuxt/experience.226835e3.mjs",
     "src": "pages/experience.vue",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs",
-      "_Link.vue_vue_type_script_setup_true_lang.89206db9.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.8695a01e.mjs"
+      "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs"
     ],
     "assets": [
-      "_nuxt/gocallink-fullui.9926256b.jpeg",
-      "_nuxt/hlreport-m-4.8203ef75.jpeg",
+      "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
+      "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
       "_nuxt/maav-website.07a144a0.png"
     ]
   },
-  "_Link.vue_vue_type_script_setup_true_lang.89206db9.mjs": {
-    "file": "_nuxt/Link.vue_vue_type_script_setup_true_lang.89206db9.mjs",
+  "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs": {
+    "file": "_nuxt/Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ]
   },
-  "_Content.vue_vue_type_script_setup_true_lang.8695a01e.mjs": {
-    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.8695a01e.mjs",
+  "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs": {
+    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ]
   },
   "pages/index.vue": {
-    "file": "_nuxt/index.827ffbde.mjs",
+    "file": "_nuxt/index.4e4fb06d.mjs",
     "src": "pages/index.vue",
     "isDynamicEntry": true,
     "imports": [
-      "_Content.vue_vue_type_script_setup_true_lang.8695a01e.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
       "node_modules/nuxt/dist/app/entry.mjs",
       "__plugin-vue_export-helper.7287ed4b.mjs"
     ],
@@ -141,12 +141,12 @@
     "file": "_nuxt/_plugin-vue_export-helper.7287ed4b.mjs"
   },
   "pages/projects.vue": {
-    "file": "_nuxt/projects.1459b9ed.mjs",
+    "file": "_nuxt/projects.eccff8d5.mjs",
     "src": "pages/projects.vue",
     "isDynamicEntry": true,
     "imports": [
-      "_Link.vue_vue_type_script_setup_true_lang.89206db9.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.8695a01e.mjs",
+      "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
       "node_modules/nuxt/dist/app/entry.mjs"
     ],
     "assets": [
@@ -154,7 +154,7 @@
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue": {
-    "file": "_nuxt/error-404.68fd970d.mjs",
+    "file": "_nuxt/error-404.53a3a179.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -166,7 +166,7 @@
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue": {
-    "file": "_nuxt/error-500.182e18ce.mjs",
+    "file": "_nuxt/error-500.3b047a52.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -181,12 +181,12 @@
     "file": "_nuxt/error-500.08851880.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.css"
   },
-  "node_modules/nuxt/dist/app/entry.css": {
-    "file": "_nuxt/entry.f6fa2434.css",
-    "src": "node_modules/nuxt/dist/app/entry.css"
-  },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.css": {
     "file": "_nuxt/error-404.7729cee9.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.css"
+  },
+  "node_modules/nuxt/dist/app/entry.css": {
+    "file": "_nuxt/entry.f3ffb98f.css",
+    "src": "node_modules/nuxt/dist/app/entry.css"
   }
 }
