--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
 {
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-latin-variable-wghtOnly-normal.ae919a7c.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2"
-  },
   "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-normal.56544b89.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-normal.3fef5946.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2"
   },
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-latin-variable-wghtOnly-normal.ae919a7c.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-normal.56544b89.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2"
+  },
   "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-normal.cffe1393.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2"
   },
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-italic.8a7e993e.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2"
+  },
   "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-italic.15d402e4.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-italic.a48afdb0.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-latin-variable-wghtOnly-italic.33befdbb.woff2",
@@ -35,21 +35,29 @@
     "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-italic.9df5f242.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-italic.8a7e993e.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2"
-  },
-  "assets/img/profile.jpg": {
-    "file": "_nuxt/profile.ad22bd34.jpg",
-    "src": "assets/img/profile.jpg"
+  "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-italic.a48afdb0.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2"
   },
   "assets/img/synthszr.png": {
     "file": "_nuxt/synthszr.acde00c0.png",
     "src": "assets/img/synthszr.png"
   },
+  "assets/img/igloo.png": {
+    "file": "_nuxt/igloo.ab6c6073.png",
+    "src": "assets/img/igloo.png"
+  },
+  "assets/img/maav.png": {
+    "file": "_nuxt/maav.0bc9381a.png",
+    "src": "assets/img/maav.png"
+  },
   "assets/img/gocallink-fullui-cropped.jpeg": {
     "file": "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
     "src": "assets/img/gocallink-fullui-cropped.jpeg"
+  },
+  "assets/img/origamiclub-simple.png": {
+    "file": "_nuxt/origamiclub-simple.b5f50608.png",
+    "src": "assets/img/origamiclub-simple.png"
   },
   "assets/img/hlreport-m-4-cropped.jpeg": {
     "file": "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
@@ -60,7 +68,7 @@
     "src": "assets/img/maav-website.png"
   },
   "node_modules/nuxt/dist/app/entry.mjs": {
-    "file": "_nuxt/entry.9f037b96.mjs",
+    "file": "_nuxt/entry.e92d9c4f.mjs",
     "src": "node_modules/nuxt/dist/app/entry.mjs",
     "isEntry": true,
     "dynamicImports": [
@@ -70,7 +78,7 @@
       "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs"
     ],
     "css": [
-      "_nuxt/entry.f3ffb98f.css"
+      "_nuxt/entry.aa49cd8f.css"
     ],
     "assets": [
       "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
@@ -86,7 +94,7 @@
     ]
   },
   "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs": {
-    "file": "_nuxt/error-component.99678f1b.mjs",
+    "file": "_nuxt/error-component.0d0a29ba.mjs",
     "src": "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs",
     "isDynamicEntry": true,
     "imports": [
@@ -98,55 +106,56 @@
     ]
   },
   "pages/experience.vue": {
-    "file": "_nuxt/experience.226835e3.mjs",
+    "file": "_nuxt/experience.a1c8207b.mjs",
     "src": "pages/experience.vue",
     "isDynamicEntry": true,
     "imports": [
+      "__plugin-vue_export-helper.7287ed4b.mjs",
       "node_modules/nuxt/dist/app/entry.mjs",
-      "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs"
+      "_Link.vue_vue_type_script_setup_true_lang.34e4d1b2.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.cfe715eb.mjs"
     ],
     "assets": [
+      "_nuxt/igloo.ab6c6073.png",
       "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
       "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
-      "_nuxt/maav-website.07a144a0.png"
+      "_nuxt/maav.0bc9381a.png",
+      "_nuxt/maav-website.07a144a0.png",
+      "_nuxt/origamiclub-simple.b5f50608.png"
     ]
   },
-  "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs": {
-    "file": "_nuxt/Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
+  "_Link.vue_vue_type_script_setup_true_lang.34e4d1b2.mjs": {
+    "file": "_nuxt/Link.vue_vue_type_script_setup_true_lang.34e4d1b2.mjs",
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ]
   },
-  "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs": {
-    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
+  "_Content.vue_vue_type_script_setup_true_lang.cfe715eb.mjs": {
+    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.cfe715eb.mjs",
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
-    ]
-  },
-  "pages/index.vue": {
-    "file": "_nuxt/index.4e4fb06d.mjs",
-    "src": "pages/index.vue",
-    "isDynamicEntry": true,
-    "imports": [
-      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
-      "node_modules/nuxt/dist/app/entry.mjs",
-      "__plugin-vue_export-helper.7287ed4b.mjs"
-    ],
-    "assets": [
-      "_nuxt/profile.ad22bd34.jpg"
     ]
   },
   "__plugin-vue_export-helper.7287ed4b.mjs": {
     "file": "_nuxt/_plugin-vue_export-helper.7287ed4b.mjs"
   },
+  "pages/index.vue": {
+    "file": "_nuxt/index.dca9928c.mjs",
+    "src": "pages/index.vue",
+    "isDynamicEntry": true,
+    "imports": [
+      "_Content.vue_vue_type_script_setup_true_lang.cfe715eb.mjs",
+      "node_modules/nuxt/dist/app/entry.mjs",
+      "__plugin-vue_export-helper.7287ed4b.mjs"
+    ]
+  },
   "pages/projects.vue": {
-    "file": "_nuxt/projects.eccff8d5.mjs",
+    "file": "_nuxt/projects.4e61680b.mjs",
     "src": "pages/projects.vue",
     "isDynamicEntry": true,
     "imports": [
-      "_Link.vue_vue_type_script_setup_true_lang.6303b137.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.21ce2f1d.mjs",
+      "_Link.vue_vue_type_script_setup_true_lang.34e4d1b2.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.cfe715eb.mjs",
       "node_modules/nuxt/dist/app/entry.mjs"
     ],
     "assets": [
@@ -154,7 +163,7 @@
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue": {
-    "file": "_nuxt/error-404.53a3a179.mjs",
+    "file": "_nuxt/error-404.a88013b3.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -166,7 +175,7 @@
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue": {
-    "file": "_nuxt/error-500.3b047a52.mjs",
+    "file": "_nuxt/error-500.d61aebc1.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -186,7 +195,7 @@
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.css"
   },
   "node_modules/nuxt/dist/app/entry.css": {
-    "file": "_nuxt/entry.f3ffb98f.css",
+    "file": "_nuxt/entry.aa49cd8f.css",
     "src": "node_modules/nuxt/dist/app/entry.css"
   }
 }
