--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,43 @@
 {
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-normal.3fef5946.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-normal.cffe1393.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2"
-  },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-latin-variable-wghtOnly-normal.ae919a7c.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2": {
     "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-normal.56544b89.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-normal.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-latin-variable-wghtOnly-italic.33befdbb.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-normal.3fef5946.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-italic.15d402e4.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-normal.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2": {
+    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-normal.cffe1393.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-normal.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-cyrillic-variable-wghtOnly-italic.8a7e993e.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-variable-wghtOnly-italic.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2": {
-    "file": "_nuxt/montserrat-latin-variable-wghtOnly-normal.ae919a7c.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-normal.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-cyrillic-ext-variable-wghtOnly-italic.15d402e4.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2"
+  },
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-italic.9df5f242.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2"
   },
   "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2": {
     "file": "_nuxt/montserrat-vietnamese-variable-wghtOnly-italic.a48afdb0.woff2",
     "src": "node_modules/@fontsource/montserrat/files/montserrat-vietnamese-variable-wghtOnly-italic.woff2"
   },
-  "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2": {
-    "file": "_nuxt/montserrat-latin-ext-variable-wghtOnly-italic.9df5f242.woff2",
-    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-ext-variable-wghtOnly-italic.woff2"
+  "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2": {
+    "file": "_nuxt/montserrat-latin-variable-wghtOnly-italic.33befdbb.woff2",
+    "src": "node_modules/@fontsource/montserrat/files/montserrat-latin-variable-wghtOnly-italic.woff2"
   },
   "assets/img/synthszr.png": {
     "file": "_nuxt/synthszr.acde00c0.png",
@@ -47,6 +47,14 @@
     "file": "_nuxt/igloo.ab6c6073.png",
     "src": "assets/img/igloo.png"
   },
+  "assets/img/origamiclub-simple.png": {
+    "file": "_nuxt/origamiclub-simple.b5f50608.png",
+    "src": "assets/img/origamiclub-simple.png"
+  },
+  "assets/img/hlreport-m-4-cropped.jpeg": {
+    "file": "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
+    "src": "assets/img/hlreport-m-4-cropped.jpeg"
+  },
   "assets/img/gocallink-fullui-cropped.jpeg": {
     "file": "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
     "src": "assets/img/gocallink-fullui-cropped.jpeg"
@@ -55,20 +63,12 @@
     "file": "_nuxt/maav.0bc9381a.png",
     "src": "assets/img/maav.png"
   },
-  "assets/img/hlreport-m-4-cropped.jpeg": {
-    "file": "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
-    "src": "assets/img/hlreport-m-4-cropped.jpeg"
-  },
-  "assets/img/origamiclub-simple.png": {
-    "file": "_nuxt/origamiclub-simple.b5f50608.png",
-    "src": "assets/img/origamiclub-simple.png"
-  },
   "assets/img/maav-website.png": {
     "file": "_nuxt/maav-website.07a144a0.png",
     "src": "assets/img/maav-website.png"
   },
   "node_modules/nuxt/dist/app/entry.mjs": {
-    "file": "_nuxt/entry.f4aa632e.mjs",
+    "file": "_nuxt/entry.3b4a366c.mjs",
     "src": "node_modules/nuxt/dist/app/entry.mjs",
     "isEntry": true,
     "dynamicImports": [
@@ -78,7 +78,7 @@
       "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs"
     ],
     "css": [
-      "_nuxt/entry.aa49cd8f.css"
+      "_nuxt/entry.0e442bf4.css"
     ],
     "assets": [
       "_nuxt/montserrat-cyrillic-variable-wghtOnly-normal.a8447cde.woff2",
@@ -94,7 +94,7 @@
     ]
   },
   "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs": {
-    "file": "_nuxt/error-component.452a4923.mjs",
+    "file": "_nuxt/error-component.3ae18f29.mjs",
     "src": "virtual:nuxt:C:/Users/Kari/OneDrive/Coding/Web/personal-site/.nuxt/error-component.mjs",
     "isDynamicEntry": true,
     "imports": [
@@ -106,32 +106,33 @@
     ]
   },
   "pages/experience.vue": {
-    "file": "_nuxt/experience.2a46ddab.mjs",
+    "file": "_nuxt/experience.f6783a65.mjs",
     "src": "pages/experience.vue",
     "isDynamicEntry": true,
     "imports": [
-      "__plugin-vue_export-helper.7287ed4b.mjs",
+      "_python.8ab20ddb.mjs",
       "node_modules/nuxt/dist/app/entry.mjs",
-      "_Link.vue_vue_type_script_setup_true_lang.6f233fcd.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.6992c0c4.mjs"
+      "_Content.vue_vue_type_script_setup_true_lang.b2859c95.mjs",
+      "__plugin-vue_export-helper.7287ed4b.mjs"
     ],
     "assets": [
       "_nuxt/igloo.ab6c6073.png",
-      "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
       "_nuxt/hlreport-m-4-cropped.8710dee4.jpeg",
+      "_nuxt/gocallink-fullui-cropped.5ee9886d.jpeg",
       "_nuxt/maav.0bc9381a.png",
       "_nuxt/maav-website.07a144a0.png",
       "_nuxt/origamiclub-simple.b5f50608.png"
     ]
   },
-  "_Link.vue_vue_type_script_setup_true_lang.6f233fcd.mjs": {
-    "file": "_nuxt/Link.vue_vue_type_script_setup_true_lang.6f233fcd.mjs",
+  "_python.8ab20ddb.mjs": {
+    "file": "_nuxt/python.8ab20ddb.mjs",
     "imports": [
-      "node_modules/nuxt/dist/app/entry.mjs"
+      "node_modules/nuxt/dist/app/entry.mjs",
+      "__plugin-vue_export-helper.7287ed4b.mjs"
     ]
   },
-  "_Content.vue_vue_type_script_setup_true_lang.6992c0c4.mjs": {
-    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.6992c0c4.mjs",
+  "_Content.vue_vue_type_script_setup_true_lang.b2859c95.mjs": {
+    "file": "_nuxt/Content.vue_vue_type_script_setup_true_lang.b2859c95.mjs",
     "imports": [
       "node_modules/nuxt/dist/app/entry.mjs"
     ]
@@ -140,30 +141,31 @@
     "file": "_nuxt/_plugin-vue_export-helper.7287ed4b.mjs"
   },
   "pages/index.vue": {
-    "file": "_nuxt/index.8772b2aa.mjs",
+    "file": "_nuxt/index.001e5a94.mjs",
     "src": "pages/index.vue",
     "isDynamicEntry": true,
     "imports": [
-      "_Content.vue_vue_type_script_setup_true_lang.6992c0c4.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.b2859c95.mjs",
       "node_modules/nuxt/dist/app/entry.mjs",
       "__plugin-vue_export-helper.7287ed4b.mjs"
     ]
   },
   "pages/projects.vue": {
-    "file": "_nuxt/projects.cbcd171a.mjs",
+    "file": "_nuxt/projects.184925cc.mjs",
     "src": "pages/projects.vue",
     "isDynamicEntry": true,
     "imports": [
-      "_Link.vue_vue_type_script_setup_true_lang.6f233fcd.mjs",
-      "_Content.vue_vue_type_script_setup_true_lang.6992c0c4.mjs",
-      "node_modules/nuxt/dist/app/entry.mjs"
+      "_python.8ab20ddb.mjs",
+      "_Content.vue_vue_type_script_setup_true_lang.b2859c95.mjs",
+      "node_modules/nuxt/dist/app/entry.mjs",
+      "__plugin-vue_export-helper.7287ed4b.mjs"
     ],
     "assets": [
       "_nuxt/synthszr.acde00c0.png"
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue": {
-    "file": "_nuxt/error-404.a4d21a19.mjs",
+    "file": "_nuxt/error-404.eee9700f.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -175,7 +177,7 @@
     ]
   },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue": {
-    "file": "_nuxt/error-500.40498d1c.mjs",
+    "file": "_nuxt/error-500.7cea79a7.mjs",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.vue",
     "isDynamicEntry": true,
     "imports": [
@@ -186,10 +188,6 @@
       "_nuxt/error-500.08851880.css"
     ]
   },
-  "node_modules/nuxt/dist/app/entry.css": {
-    "file": "_nuxt/entry.aa49cd8f.css",
-    "src": "node_modules/nuxt/dist/app/entry.css"
-  },
   "node_modules/@nuxt/ui-templates/dist/templates/error-500.css": {
     "file": "_nuxt/error-500.08851880.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-500.css"
@@ -197,5 +195,9 @@
   "node_modules/@nuxt/ui-templates/dist/templates/error-404.css": {
     "file": "_nuxt/error-404.7729cee9.css",
     "src": "node_modules/@nuxt/ui-templates/dist/templates/error-404.css"
+  },
+  "node_modules/nuxt/dist/app/entry.css": {
+    "file": "_nuxt/entry.0e442bf4.css",
+    "src": "node_modules/nuxt/dist/app/entry.css"
   }
 }
