--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "deploy": "nuxt generate && gh-pages -d dist --dotfiles"
   },
   "devDependencies": {
-    "@fontsource/montserrat": "^4.5.12",
-    "@iconify-json/bi": "^1.1.7",
-    "@iconify-json/logos": "^1.1.14",
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "@tailwindcss/typography": "^0.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@fontsource/montserrat": "^4.5.13",
+    "@iconify-json/bi": "^1.1.10",
+    "@iconify-json/logos": "^1.1.18",
+    "@iconify-json/simple-icons": "^1.1.33",
+    "@nuxtjs/color-mode": "^3.1.8",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "@vue/eslint-config-standard": "^8.0.1",
-    "eslint": "^8.23.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint-plugin-vue": "^9.7.0",
     "gh-pages": "^4.0.0",
-    "nuxt": "3.0.0-rc.8",
-    "unplugin-icons": "^0.14.8",
+    "nuxt": "^3.0.0-rc.13",
+    "unplugin-icons": "^0.14.13",
     "unplugin-vue-components": "^0.21.2"
   }
 }
